--- a/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
@@ -41,6 +41,9 @@
                 <a class="btn btn-lg btn-default" href="{{ path('user_home') }}">
                     View Outstanding Orders
                 </a>
+                <a class="btn btn-lg btn-default" href="{{ path('view_all_orders') }}">
+                    View All Orders
+                </a>
             </center>
         </div>
     </div>
