--- a/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
@@ -29,7 +29,7 @@
                 <a class="btn btn-lg btn-primary" href="{{ path('user_home_option', {'option': 'colorhead'}) }}">
                     Place Colorhead Order
                 </a>
-                <a class="btn btn-lg btn-primary" href="{{ path('user_home_option', {'option': 'filter'}) }}">
+                <a class="btn btn-lg btn-primary" href="{{ path('user_home_option', {'option': 'filters'}) }}">
                     Place Filter Order
                 </a>
             </center>
