--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -132,30 +132,6 @@
                             No products currently in cart.
                         </div>
                     </div>
-                    <div class="modal fade" id="myModal2" role="dialog">
-                        <div class="modal-dialog modal-lg">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">ADD AN UNKNOWN ITEM</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <textarea class="form-control" rows="5" id="unknown_item_description2"></textarea>
-
-                                    <p style="margin: 22px 0 0px 8px;">Please describe the item in as much
-                                        detail as you can.</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">CLOSE
-                                    </button>
-                                    <button type="button" class="btn btn-primary" data-dismiss="modal"
-                                            ng-click="addUnknownItem2()">ADD TO
-                                        ORDER
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div ng-if="cart.length != 0">
                         {% verbatim %}
                             <table id="cart-table" class="table table-striped table-bordered" cellspacing="0" style="margin-top: -7px;">
@@ -221,7 +197,8 @@
                         <a ng-if="cart.length > 0" class="btn btn-primary" id="review_order"
                            style="float: right;margin-right: 20px; margin-bottom: 20px;" ng-click="reviewOrder()">REVIEW ORDER</a>
 
-                        <button ng-if="option != 'colorhead'" type="button" class="btn btn-primary"
+                        <button ng-if="option != 'colorhead' && option != 'filters'" type="button"
+                                class="btn btn-primary"
                                 id="btnAddUnknownItem" data-toggle="modal" data-target="#myModal"
                                 style="float: right;margin-right: 20px; margin-bottom: 20px;">ADD AN UNKNOWN ITEM
                         </button>
@@ -431,8 +408,7 @@
                 });
             }
 
-            // Load Cart
-            $.get("{{ path('api_load_cart') }}").done(updateCart);
+
 
             $.ajax({
                 type: 'POST',
@@ -440,11 +416,14 @@
                 data: {option: $scope.option},
                 dataType: 'json',
                 success: function (data) {
+
                 },
                 error: function (data) {
                     console.log(data);
                 }
             });
+            // Load Cart
+            $.get("{{ path('api_load_cart') }}").done(updateCart);
 
             // Load Products
             $.get("{{ path('api_get_products') }}").done(function (data) {
