--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -193,6 +193,84 @@
             </div>
         </div>
 
+
+        <div class="row ">
+            <div class="col-md-12">
+                <div class="portlet">
+                    <div class="portlet-title" style="background-color: #dff0d8 !important;">
+                        <div class="caption">
+                            <i class="fa fa-bell"></i>BACKORDERED ITEMS THAT NEED TO BE SHIPPED
+                        </div>
+                    </div>
+                    <div class="portlet-body">
+                        <div class="table-scrollable">
+                            <table class="table table-striped table-bordered table-hover">
+                                {% if submitted_backorders %}
+                                    <thead>
+                                    <tr>
+                                        <th>
+                                            DATE SUBMITTED
+                                        </th>
+                                        <th>
+                                            OFFICE
+                                        </th>
+                                        <th>
+                                            BACK ORDERED ITEMS
+                                        </th>
+                                        <th>
+                                            SHIPPED ITEMS
+                                        </th>
+                                        <th>
+                                            ORDER #
+                                        </th>
+                                        <th>
+                                        </th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for item in submitted_backorders %}
+                                        <tr>
+                                            <td>
+                                                {{ item.submit_date | date('m/d/y   h:i A') }}
+                                            </td>
+                                            <td>
+                                                {{ item.office_name ? item.office_name : ' ' }}
+                                            </td>
+                                            <td>
+                                                <center>
+                                                    {{ item.bo_quan }}
+                                                </center>
+                                            </td>
+                                            <td>
+                                                <center>{{ item.bo_ship }}</center>
+                                            </td>
+                                            <td>
+                                                <center>{{ item.order_number }}</center>
+                                            </td>
+                                            <td style="width: 60px;">
+                                                <a href="{{ path('admin_order_edit', {'cart_id': item.id}) }}"
+                                                   class="btn btn-info btn-xs">Approve</a>
+                                                <a href="{{ path('admin_order_delete', {'id': item.id}) }}"
+                                                   class="btn-remove-cart btn btn-danger btn-xs">Remove</a>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                {% else %}
+                                    <div style="padding: 10px;">
+                                        <center><h4>There are no orders that have backordered items that need to be
+                                                reviewed.</h4>
+                                        </center>
+                                    </div>
+                                {% endif %}
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
         <div class="row ">
             <div class="col-md-12">
                 <div class="portlet">
