--- a/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
@@ -39,7 +39,7 @@
         <div class="col-md-12">
             <center>
                 <a class="btn btn-lg btn-default" href="{{ path('user_home') }}">
-                    View Outstanding Orders
+                    View Outstanding Returns
                 </a>
                 <a class="btn btn-lg btn-default" href="{{ path('view_all_orders') }}">
                     View All Orders
