--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -38,7 +38,7 @@
 
     <div class="row" style="margin-left: 0px; margin-right: 0px;">
         <div class="row stats-overview-cont">
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="stats-overview stat-block">
                     <div class="details">
                         <div class="title">
@@ -56,11 +56,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="stats-overview stat-block">
                     <div class="details">
                         <div class="title">
-                            <center># of Items Backordered</center>
+                            <center># of Parts Backordered</center>
                         </div>
                         <hr>
                         <div class="numbers"
@@ -69,6 +69,24 @@
                                 <center class="text-success">{{ num_items_on_backorder }}</center>
                             {% else %}
                                 <center class="text-danger">{{ num_items_on_backorder }}</center>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="stats-overview stat-block">
+                    <div class="details">
+                        <div class="title">
+                            <center>Return Items Expected</center>
+                        </div>
+                        <hr>
+                        <div class="numbers"
+                             style="margin-bottom: 15px; margin-top: 15px;font-size: 27px;font-weight: 600;">
+                            {% if num_parts_requiring_return == 0 %}
+                                <center class="text-success">{{ num_parts_requiring_return }}</center>
+                            {% else %}
+                                <center class="text-danger">{{ num_parts_requiring_return }}</center>
                             {% endif %}
                         </div>
                     </div>
@@ -192,7 +210,7 @@
         {% endif %}
 
 
-        {% if submitted %}
+        {% if submitted_colorhead %}
         <div class="row ">
             <div class="col-md-12">
                 <div class="portlet">
@@ -405,6 +423,84 @@
         </div>
         {% endif %}
 
+
+        {#{% if parts_requiring_return %}#}
+        {#<div class="row ">#}
+        {#<div class="col-md-12">#}
+        {#<div class="portlet">#}
+        {#<div class="portlet-title" style="background-color: #dff0d8 !important;">#}
+        {#<div class="caption">#}
+        {#<i class="fa fa-bell"></i>PARTS THAT NEED TO BE RETURNED TO USTER#}
+        {#</div>#}
+        {#</div>#}
+        {#<div class="portlet-body">#}
+        {#<div class="table-scrollable">#}
+        {#<table class="table table-striped table-bordered table-hover">#}
+        {#<thead>#}
+        {#<tr>#}
+        {#<th>#}
+        {#DATE SUBMITTED#}
+        {#</th>#}
+        {#<th>#}
+        {#RETURN QUANTITY#}
+        {#</th>#}
+        {#<th>#}
+        {#ITEMS RETURNED#}
+        {#</th>#}
+        {#<th>#}
+        {#SHIPPED ITEMS#}
+        {#</th>#}
+        {#<th>#}
+        {#OFFICE#}
+        {#</th>#}
+        {#<th>#}
+        {#ORDER ##}
+    {#</th>#}
+        {#<th>#}
+        {#</th>#}
+        {#</tr>#}
+        {#</thead>#}
+        {#<tbody>#}
+        {#{% for item in parts_requiring_return %}#}
+        {#<tr>#}
+        {#<td>#}
+        {#{{ item.submit_date | date('m/d/y   h:i A') }}#}
+        {#</td>#}
+        {#<td>#}
+        {#<center>#}
+        {#{{ item.quantity }}#}
+        {#</center>#}
+        {#</td>#}
+        {#<td>#}
+        {#<center>#}
+        {#{{ item.returned_items_quantity }}#}
+        {#</center>#}
+        {#</td>#}
+        {#<td>#}
+        {#<center>{{ item.ship_quantity }}</center>#}
+        {#</td>#}
+        {#<td>#}
+        {#{{ item.office_name ? item.office_name : ' ' }}#}
+        {#</td>#}
+        {#<td>#}
+        {#<center>{{ item.order_number }}</center>#}
+        {#</td>#}
+        {#<td style="width: 60px;">#}
+        {#<a href="{{ path('admin_backorder_edit', {'cart_id': item.id}) }}"#}
+        {#class="btn btn-info btn-xs">Update</a>#}
+        {#<a href="{{ path('admin_order_delete', {'id': item.id}) }}"#}
+        {#class="btn-remove-cart btn btn-danger btn-xs">Remove</a>#}
+        {#</td>#}
+        {#</tr>#}
+        {#{% endfor %}#}
+        {#</tbody>#}
+        {#</table>#}
+        {#</div>#}
+        {#</div>#}
+        {#</div>#}
+        {#</div>#}
+        {#</div>#}
+        {#{% endif %}#}
 
 
         <div class="row ">
