--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -109,6 +109,17 @@
                                     <span class="title">Dashboard</span>
                                 </a>
                         </li>
+
+                        <li class="{% if app.request.get('_route') == 'view_oustanding_orders' %}active{% endif %}">
+                            {% if is_granted('ROLE_ADMIN') %}
+                            <a href="{{ path('view_oustanding_orders') }}">
+                                {% endif %}
+
+                                <i class="icon-notebook"></i>
+                                <span class="title">Outstanding Orders</span>
+                            </a>
+                        </li>
+
                         {% if is_granted('ROLE_ADMIN') %}
                             <li class="z {% if app.request.attributes.get('_route') in [
                             'fos_user_group_list',
