--- a/src/AppBundle/Resources/views/Admin/approve_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/approve_order.html.twig
@@ -175,8 +175,8 @@
                                             </address>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-xs-12 invoice-block"
-                                         style="text-align: right; margin-top: 30px;">
+                                    <div class="col-md-6 col-xs-12 invoice-block"
+                                         style="text-align: right; margin-top: 30px;float: right;">
                                         <ul class="list-unstyled amounts">
                                             <li><strong>Shipping:</strong><span class="total-value">{{ shipping }}</span><hr></li>
                                             <li><strong>Items Requested:</strong><span class="total-value">{{ totalRequested }}</span></li>
