--- a/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
@@ -126,7 +126,7 @@
         function approveReturn(id) {
 //            confirm("Are you sure you want to count these items as returned?")
             var numItemsReceived = parseInt($('#' + id + '-shipped').text());
-            console.log(numItemsReceived);;;;;;;;;;;;;;;
+            console.log(numItemsReceived);
 
             var newNumItemsReceived = window.prompt("How many items did you receive?", numItemsReceived);
             console.log(newNumItemsReceived);
