--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -172,7 +172,9 @@
                                             </td>
                                             <td style="width: 60px;">
                                                 <a href="{{ path('admin_order_edit', {'cart_id': item.id}) }}"
-                                                   class="btn btn-danger btn-xs">Approve</a>
+                                                   class="btn btn-info btn-xs">Approve</a>
+                                                <a href="{{ path('admin_order_delete', {'id': item.id}) }}"
+                                                   class="btn-remove-cart btn btn-danger btn-xs">Remove</a>
                                             </td>
                                         </tr>
                                     {% endfor %}
