--- a/src/AppBundle/Resources/views/Cart/view-all-open-returns.html.twig
+++ b/src/AppBundle/Resources/views/Cart/view-all-open-returns.html.twig
@@ -16,22 +16,13 @@
 {% endblock page_name %}
 
 {% block content %}
-    <div class="row" style="margin-bottom: 30px;">
-        <div class="col-md-12">
-            <center>
-                <a class="btn btn-lg btn-primary" href="{{ path("user_home") }}">
-                    Submit Another Order
-                </a>
-            </center>
-        </div>
-    </div>
     <div class="row">
         <div id="submitted" class="col-md-6">
             <div class="stats-overview stat-block">
                 <div class="details">
 
                     <div class="numbers">
-                        SUBMITTED ORDERS
+                        PARTS THAT NEED TO BE RETURNED
                     </div>
                     <hr>
                     {% if submitted %}
@@ -83,7 +74,7 @@
                 <div class="details">
 
                     <div class="numbers">
-                        APPROVED ORDERS
+                        PARTS THAT HAVE BEEN RETURNED
                     </div>
                     <hr>
                     {% if approved %}
