--- a/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
@@ -38,6 +38,9 @@
     <div class="row" style="margin-bottom: 30px;">
         <div class="col-md-12">
             <center>
+                <a class="btn btn-lg btn-default" href="{{ path('prepare_a_return') }}">
+                    Prepare a Return
+                </a>
                 <a class="btn btn-lg btn-default" href="{{ path('view_all_outstanding_returns') }}">
                     View Outstanding Returns
                 </a>
